--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -11,7 +11,7 @@
         android:layout_width="1000dp"
         android:layout_height="650dp"
         android:src="@drawable/circle"
-        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment"
+        app:layout_constraintBottom_toTopOf="@+id/list_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.631"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.469" />
 
     <fragment
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/list_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/button-left"
+        android:id="@+id/button_left"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
@@ -60,13 +60,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/button-right"
+        android:id="@+id/button_right"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_baseline_chevron_right_24"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/dateToShow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="107dp"
+        android:text="00-00-0000"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
