--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -25,5 +25,16 @@
         app:backgroundTint="@color/colorAccent"
         app:rippleColor="#FFFFFF"
         app:srcCompat="@drawable/ic_baseline_add_24" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
+        app:tint="@android:color/white"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
