--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -43,53 +43,94 @@
         <TextView
             android:id="@+id/meeting_description"
 
-            android:text="@string/large_text"
-
             android:layout_width="0dp"
+
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
+            android:text="@string/large_text"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintStart_toStartOf="@+id/meeting_date"
             app:layout_constraintTop_toBottomOf="@+id/meeting_date" />
+
         <TextView
             android:id="@+id/explain_buttons"
-            android:text="@string/explainer_traffic_lights"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="@string/explainer_already_voted"
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintStart_toStartOf="@+id/meeting_description"
-            app:layout_constraintTop_toBottomOf="@+id/meeting_description"/>
+            app:layout_constraintTop_toBottomOf="@+id/meeting_description" />
 
         <ImageView
             android:id="@+id/red_circle"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/red_circle"
-            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@+id/explain_buttons"
             app:layout_constraintTop_toBottomOf="@+id/explain_buttons" />
+
         <ImageView
             android:id="@+id/orange_circle"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/orange_circle"
             android:layout_marginTop="10dp"
+            android:src="@drawable/orange_circle"
             app:layout_constraintStart_toStartOf="@+id/red_circle"
             app:layout_constraintTop_toBottomOf="@+id/red_circle" />
+
         <ImageView
             android:id="@+id/green_circle"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/green_circle"
             android:layout_marginTop="10dp"
+            android:src="@drawable/green_circle"
             app:layout_constraintStart_toStartOf="@+id/orange_circle"
             app:layout_constraintTop_toBottomOf="@+id/orange_circle" />
+
+        <TextView
+            android:id="@+id/rateRed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+
+            android:text="0%"
+            android:textSize="45sp"
+            app:layout_constraintBottom_toBottomOf="@+id/red_circle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/rateOrange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+
+            android:text="0%"
+            android:textSize="45sp"
+            app:layout_constraintBottom_toBottomOf="@+id/orange_circle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/rateGreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+
+            android:text="0%"
+            android:textSize="45sp"
+            app:layout_constraintBottom_toBottomOf="@+id/green_circle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
