--- a/app/src/main/res/layout/activity_new_meeting.xml
+++ b/app/src/main/res/layout/activity_new_meeting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MeetingActivity">
+    tools:context=".NewMeeting">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -47,10 +47,10 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_scrolling" />
+    <include layout="@layout/content_scrolling_new_meeting" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/delete_meeting_button"
+        android:id="@+id/save_meeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
